--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <h1 class="display-4" id="date">Date & Time</h1>
     <h4 id="currentTime"></h4>
     <hr class="my-4">
-    <p id="QOD"><strong>Daily Quote</strong>
+    <h6><strong>Daily Quote</strong></h6>
+    <p id="QOD">
       <!-- default quote just in case API is faulty -->
     Be what you is. If you be what you ain't, you ain't what you is.</p> 
   </div>
